--- a/id3-metadata-demo/index.html
+++ b/id3-metadata-demo/index.html
@@ -5,11 +5,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <link href="./css/video-js.min.css" rel="stylesheet"> <!--Version: 5.14.1 -->
-    <script src="./js/video.js"></script> <!--Version: 5.14.1-->
-    <script src="./js/videojs-contrib-hls.js"></script> <!--Version: 4.0.2 -->
+    <link href="https://vjs.zencdn.net/6.1.0/video-js.css" rel="stylesheet">
+    <!-- If you'd like to support IE8 -->
+    <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
 
     <link href="./css/id3-metadata-demo.css" rel="stylesheet"> <!--Version: 5.14.1 -->
+
+    <script src="../js/demo-common.js"></script>
     <script src="js/id3-metadata-demo.js"></script>
 </head>
 
@@ -26,7 +28,7 @@
     </div>
     <div class="left-half">
         <article>
-            <video id="bcovVideoPlayback" poster="./pics/brightcove_logo_black.jpg" class="video-js vjs-default-skin vjs-16-9" controls></video>
+            <video id="bcovVideoPlayback" poster="../pics/brightcove_logo_black.jpg" class="video-js vjs-default-skin vjs-16-9" controls></video>
             <div class="container">
                 <label for="playerTime">Time: </label>
                 <input type="text" class="textfield" placeholder="-" readonly id="playerTime"/>
@@ -46,13 +48,16 @@
     <div class="right-half">
         <article>
             <h1>ID3 Insertion</h1>
-            <p>Remember the ID3 tag is injected in the source stream at the moment you click the button, this means the ID3 tag will be inserted at that moment IN THE SOURCE STREAM. It will take 3 * target_duration approx to see the ID3 tag in the player. ID3 tags are inserted in the video segments, so even if you use DVR every time that video frame is reproduced the ID3 listener will be fired.</p>
+            <ul>
+                <li>Remember the ID3 tag is injected in the source stream at the moment you click the button, this means the ID3 tag will be inserted at that moment IN THE SOURCE STREAM. It will take 3 * target_duration approx to see the ID3 tag in the player</li>
+                <li>ID3 tags are inserted in the video segments, so even if you use DVR every time that video frame is reproduced the ID3 listener will be fired</li>
+            </ul><br>
             <label for="adbreakId3Name">ID3 tag name:</label>
             <input type="text" class="textfield" placeholder="BCOV" maxlength="4" id="adbreakId3Name"/><br><br>
             <label for="adbreakId3Value">ID3 tag value:</label>
             <input type="text" class="textfield" placeholder="abcdefg" id="adbreakId3Value"/><br><br>
 
-            <button id="injectID3" disabled class="btn btn-success" onclick='injectID3()'>Inject ID3 at TC</button>
+            <button id="injectID3" disabled class="btn btn-success" onclick='injectID3()'>Inject ID3 now</button>
         </article>
         <br>
         <div class="table-responsive">
@@ -67,6 +72,9 @@
         </div>
     </div>
 </section>
+
+<script src="https://vjs.zencdn.net/6.1.0/video.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/5.8.2/videojs-contrib-hls.js"></script>
 
 <!--
    Now, initialize your player. That's it!
