Added list id3 tc

--- a/id3-metadata-demo/index_tc.html
+++ b/id3-metadata-demo/index_tc.html
@@ -48,6 +48,11 @@
         <div class="right-half">
             <article>
                 <h1>ID3 Insertion</h1>
+                <ul>
+                    <li>Remember the encoder needs to send SMPTE timecode to be able to use this ID3 insertion mode</li>
+                    <li>ID3 tags are inserted in the video segments, so even if you use DVR every time that video frame is reproduced the ID3 listener will be fired</li>
+                    <li>To check the accuracy is recommended to overlay the SMPTE TC on the video</li>
+                </ul><br>
                 <p>ID3 tags are inserted in the video segments, so even if you use DVR every time that video frame is reproduced the ID3 listener will be fired. Recommended to overlay TC to check the accuracy.</p>
                 <label for="adbreakId3Name">ID3 tag name:</label>
                 <input type="text" class="textfield" placeholder="BCOV" maxlength="4" id="adbreakId3Name"/><br><br>
