--- a/brb-demo/index.html
+++ b/brb-demo/index.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-       <title>Alive SSAI Demo interface</title>
+       <title>BRB demo</title>
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -17,7 +17,7 @@
    <body onload="onLoadPage()">
    <section class="container">
        <div class="page-header">
-           <h1 id="title">Alive SSAI demo interface</h1>
+           <h1 id="title">BRB demo</h1>
            <h2 id="jobId">Job id: - </h2>
            <h2 id="appId">App id: - </h2>
            <p id="playbackUrl">Playback URL: - </p>
@@ -33,9 +33,9 @@
        </div>
        <div class="right-half">
            <article>
-               <h1>AdBreak Controls (BRB)</h1>
+               <h1>AdBreak injection (BRB)</h1>
                <ul>
-                   <li>Remember the AdBreak is injected in the source stream at the moment you click the button, this means the adBreak will be inserted at that moment IN THE SOURCE STREAM. It will take 4 * target_duration approx to see the adBreak in the player</li>
+                   <li>The AdBreak is injected in the source stream at the moment you click the button, this means the adBreak will be inserted at that moment IN THE SOURCE STREAM. It will take 4 * target_duration approx to see the adBreak in the player</li>
                    <li>In the adBreak response you have the server time when this adbreak was injected</li>
                    <li>To check the accuracy is recommended to overlay the system time and the video</li>
                </ul><br>
