--- a/id3-metadata-demo/index.html
+++ b/id3-metadata-demo/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Alive ID3 metadata demo</title>
+    <title>ID3 BRB demo</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -18,7 +18,7 @@
 <body onload="onLoadPage()">
 <section class="container">
     <div class="page-header">
-        <h1 id="title">Alive SSAI demo interface</h1>
+        <h1 id="title">ID3 BRB demo</h1>
         <h2 id="jobId">Job id: - </h2>
         <p id="playbackUrl">Playback URL: - </p>
     </div>
@@ -49,7 +49,7 @@
         <article>
             <h1>ID3 Insertion</h1>
             <ul>
-                <li>Remember the ID3 tag is injected in the source stream at the moment you click the button, this means the ID3 tag will be inserted at that moment IN THE SOURCE STREAM. It will take 3 * target_duration approx to see the ID3 tag in the player</li>
+                <li>The ID3 tag is injected in the source stream at the moment you click the button, this means the ID3 tag will be inserted at that moment IN THE SOURCE STREAM. It will take 3 * target_duration approx to see the ID3 tag in the player</li>
                 <li>ID3 tags are inserted in the video segments, so even if you use DVR every time that video frame is reproduced the ID3 listener will be fired</li>
             </ul><br>
             <label for="adbreakId3Name">ID3 tag name:</label>
