--- a/id3-metadata-demo/index_tc.html
+++ b/id3-metadata-demo/index_tc.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Alive ID3 metadata demo</title>
+        <title>ID3 frame accurate demo</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -18,7 +18,7 @@
     <body onload="onLoadPage()">
     <section class="container">
         <div class="page-header">
-            <h1 id="title">Alive SSAI demo interface</h1>
+            <h1 id="title">ID3 frame accurate demo</h1>
             <h2 id="jobId">Job id: - </h2>
             <p id="playbackUrl">Playback URL: - </p>
         </div>
