--- a/id3-metadata-demo/index_tc.html
+++ b/id3-metadata-demo/index_tc.html
@@ -60,14 +60,14 @@
                 <label for="adbreakTC">Insertion TC:</label>
                 <input type="text" class="textfield" value="00:01:00:00" id="adbreakTC" placeholder="HH:MM:SS:FF" maxlength="11" onkeypress="return keyIsTCChar(event)" /><br><br>
 
-                <button id="injectID3" disabled class="btn btn-success" onclick='injectID3OnTC()'>Inject ID3 at TC</button>
+                <button id="injectID3" disabled class="btn btn-success" onclick='injectID3OnTC()'>Insert ID3 at TC</button>
             </article>
             <br>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
                     <tr>
-                        <th>Injected ID3 tags:</th>
+                        <th>Inserted ID3 tags:</th>
                     </tr>
                     </thead>
                     <tbody class="spaceUnder2" id="injectedList"></tbody>
