--- a/adbreak-demo/index_tc.html
+++ b/adbreak-demo/index_tc.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-       <title>BRB frame accurate demo</title>
+       <title>Adbreak frame accurate demo</title>
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -17,7 +17,7 @@
    <body onload="onLoadPage()">
    <section class="container">
        <div class="page-header">
-           <h1 id="title">BRB frame accurate demo</h1>
+           <h1 id="title">Adbreak frame accurate demo</h1>
            <h2 id="jobId">Job id: - </h2>
            <h2 id="appId">App id: - </h2>
            <p id="playbackUrl">Playback URL: - </p>
