--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
            <div class="form-group">
                <label for="insertAdBreak">Inject adBreak:</label>
                <div id="insertAdBreak" class="btn-group">
-                   <button id="gossai" type="button" onclick="openDemoBRB()" class="btn btn-success">BRB (Immediate)</button>
-                   <button id="gossaitc" type="button" onclick="opendemoBRBTC()" class="btn btn-success">By SMPTE TC (frame accurate)</button>
+                   <button id="gossai" type="button" onclick="openDemoAdBreak()" class="btn btn-success">BRB (Immediate)</button>
+                   <button id="gossaitc" type="button" onclick="openDemoAdBreakTC()" class="btn btn-success">By SMPTE TC (frame accurate)</button>
                </div>
            </div>
            <div class="form-group">
