More better naming

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-       <title>Alive SSAI Demo interface</title>
+       <title>Alive Demo interface</title>
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -16,7 +16,7 @@
            <strong>Error!</strong><div id="errMsg"></div>
        </div>
        <div class="jumbotron">
-           <h1>Alive SSAI Demo interface</h1>
+           <h1>Alive Demo interface</h1>
            <p>Enter the following data:</p>
            <div class="form-group">
                <label for="env">Environment (automatically selected):</label>
