--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
            </div>
            <br>
            <div class="form-group">
-               <label for="insertAdBreak">Inject adBreak:</label>
+               <label for="insertAdBreak">Insert adBreak:</label>
                <div id="insertAdBreak" class="btn-group">
                    <button id="gossai" type="button" onclick="openDemoAdBreak()" class="btn btn-success">BRB (Immediate)</button>
                    <button id="gossaitc" type="button" onclick="openDemoAdBreakTC()" class="btn btn-success">By SMPTE TC (frame accurate)</button>
                </div>
            </div>
            <div class="form-group">
-               <label for="insertID3">Inject / read ID3 tags:</label>
+               <label for="insertID3">Insert / read ID3 tags:</label>
                <div id="insertID3" class="btn-group">
-                   <button id="goid3" type="button" onclick="opendemoID3()" class="btn btn-success">Inject BRB (Immediate)</button>
-                   <button id="goid3tc" type="button" onclick="opendemoID3TC()" class="btn btn-success">Inject by SMPTE TC (frame accurate)</button>
+                   <button id="goid3" type="button" onclick="opendemoID3()" class="btn btn-success">BRB (Immediate)</button>
+                   <button id="goid3tc" type="button" onclick="opendemoID3TC()" class="btn btn-success">By SMPTE TC (frame accurate)</button>
                </div>
            </div>
            <div class="form-group">
