--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                    <button id="goclipping" type="button" onclick="opendemoClipping()" class="btn btn-success">Live to VOD</button>
                </div>
            </div>
+           <div class="form-group">
+               <label for="instantclipping">Instant live clipping (just an internal POC):</label>
+               <div id="instantclipping" class="btn-group">
+                   <button id="goinstantclipping" type="button" onclick="opendemoInstantClipping()" class="btn btn-success">Instant live to VOD</button>
+                   <button id="goinstantclippingtime" type="button" onclick="opendemoInstantClippingTime()" class="btn btn-success">Instant live to VOD by time</button>
+               </div>
+           </div>
        </div>
    </div>
    </body>
